--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,23 +1,19 @@
-{% set variant = os.environ.get('SCOTCH_VARIANT', '') %}
-
-{% set name = "scotch" %}
+{% set name = "ptscotch" %}
 {% set version = "6.0.4" %}
 {% set md5 = "d58b825eb95e1db77efe8c6ff42d329f" %}
 
 package:
-  name: {{ variant + name }}
+  name: {{ name }}
   version: {{ version }}
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   md5: {{ md5 }}
-  url: https://gforge.inria.fr/frs/download.php/latestfile/298/{{ name }}_{{ version }}.tar.gz
+  url: https://gforge.inria.fr/frs/download.php/latestfile/298/scotch_{{ version }}.tar.gz
 
 build:
   skip: true  # [win]
   number: 1
-  script_env:
-    - SCOTCH_VARIANT
 
 requirements:
  build:
@@ -25,41 +21,29 @@ requirements:
   - zlib 1.2.*
   - bison
   - flex
-  {% if variant == 'pt' %}
   - mpich 3.2.*
-  {% endif %}
  run:
   - zlib 1.2.*
-  {% if variant == 'pt' %}
   - mpich 3.2.*
-  {% endif %}
 
 test:
   commands:
-    - ls "${PREFIX}/lib"
     - test -f "${PREFIX}/lib/libscotch.a"
     - test -f "${PREFIX}/lib/libscotcherr.a"
     - test -f "${PREFIX}/lib/libscotcherrexit.a"
     - test -f "${PREFIX}/lib/libscotchmetis.a"
-    {% if variant == 'pt' %}
     - test -f "${PREFIX}/lib/libptesmumps.a"
     - test -f "${PREFIX}/lib/libptscotch.a"
     - test -f "${PREFIX}/lib/libptscotcherr.a"
     - test -f "${PREFIX}/lib/libptscotcherrexit.a"
     - test -f "${PREFIX}/lib/libptscotchparmetis.a"
-    {% else %}
-    - test -f "${PREFIX}/lib/libesmumps.a"
-    {% endif %}
-    - ls "${PREFIX}/include"
     - test -f "${PREFIX}/include/esmumps.h"
     - test -f "${PREFIX}/include/metis.h"
     - test -f "${PREFIX}/include/scotch.h"
     - test -f "${PREFIX}/include/scotchf.h"
-    {% if variant == 'pt' %}
     - test -f "${PREFIX}/include/parmetis.h"
     - test -f "${PREFIX}/include/ptscotch.h"
     - test -f "${PREFIX}/include/ptscotchf.h"
-    {% endif %}
     - mord -V
     - gotst -V
     - gord -V
@@ -70,7 +54,7 @@ about:
   home: https://www.labri.fr/perso/pelegrin/scotch/
   license: CeCILL-C
   license_file: LICENSE_en.txt
-  summary: 'SCOTCH: Static Mapping, Graph, Mesh and Hypergraph Partitioning, and Parallel and Sequential Sparse Matrix Ordering Package'
+  summary: 'PT-SCOTCH: (Parallel) Static Mapping, Graph, Mesh and Hypergraph Partitioning, and Parallel and Sequential Sparse Matrix Ordering Package'
   description: |
     Software package and libraries for sequential and parallel 
     graph partitioning, static mapping and clustering, sequential 
