--- a/recipe/Makefile.inc.Linux
+++ b/recipe/Makefile.inc.Linux
@@ -1,22 +1,5 @@
 # -*- makefile -*-
-EXE             =
-LIB             = .a
-OBJ             = .o
+src_dir := $(shell dirname $(abspath $(lastword $(MAKEFILE_LIST))))
+include $(src_dir)/Makefile.inc.common
 
-MAKE            = make
-AR              = ar
-ARFLAGS         = -ruv
-CAT             = cat
-CCS             = gcc
-CCP             = gcc
-CCD             = gcc
-CFLAGS          = -I${PREFIX}/include -O3 -DIDXSIZE64 -Drestrict=__restrict -DCOMMON_FILE_COMPRESS_GZ -DCOMMON_RANDOM_FIXED_SEED -DSCOTCH_RENAME -DCOMMON_PTHREAD -DSCOTCH_PTHREAD
-CLIBFLAGS       = -fPIC
-LDFLAGS         = -L${PREFIX}/lib -lz -lm -pthread -lrt
-CP              = cp
-LEX             = flex -Pscotchyy -olex.yy.c
-LN              = ln
-MKDIR           = mkdir
-MV              = mv
-RANLIB          = ranlib
-YACC            = bison -pscotchyy -y -b y
+LDFLAGS        := ${LDFLAGS} -lrt
