--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,10 +10,13 @@ source:
   fn: {{ name }}-{{ version }}.tar.gz
   md5: {{ md5 }}
   url: https://gforge.inria.fr/frs/download.php/latestfile/298/scotch_{{ version }}.tar.gz
+  patches:
+    - patch1.diff
+    - patch2.diff
 
 build:
   skip: true  # [win]
-  number: 2
+  number: 3
 
 requirements:
  build:
@@ -27,30 +30,37 @@ requirements:
   - mpich 3.2.*
 
 test:
-  requires:
-    - toolchain
   commands:
     - test -f "${PREFIX}/lib/libscotch.a"
     - test -f "${PREFIX}/lib/libscotcherr.a"
     - test -f "${PREFIX}/lib/libscotcherrexit.a"
     - test -f "${PREFIX}/lib/libscotchmetis.a"
-    - test -f "${PREFIX}/lib/libptesmumps.a"
+    - test -f "${PREFIX}/lib/libesmumps.a"
+    - test -f "${PREFIX}/include/scotch.h"
+    - test -f "${PREFIX}/include/scotchf.h"
+    - test -f "${PREFIX}/include/metis.h"
+    - test -f "${PREFIX}/include/esmumps.h"
+    - mord -V
+    - gmap -V
+    - gord -V
+    - gotst -V
+    - gpart -V
+    - gscat -V
     - test -f "${PREFIX}/lib/libptscotch.a"
     - test -f "${PREFIX}/lib/libptscotcherr.a"
     - test -f "${PREFIX}/lib/libptscotcherrexit.a"
     - test -f "${PREFIX}/lib/libptscotchparmetis.a"
-    - test -f "${PREFIX}/include/esmumps.h"
-    - test -f "${PREFIX}/include/metis.h"
-    - test -f "${PREFIX}/include/scotch.h"
-    - test -f "${PREFIX}/include/scotchf.h"
-    - test -f "${PREFIX}/include/parmetis.h"
+    - test -f "${PREFIX}/lib/libptesmumps.a"
     - test -f "${PREFIX}/include/ptscotch.h"
     - test -f "${PREFIX}/include/ptscotchf.h"
-    - mord -V
-    - gotst -V
-    - gord -V
-    - gpart -V
-    - gmap -V
+    - test -f "${PREFIX}/include/parmetis.h"
+    - test -f "${PREFIX}/include/esmumps.h"
+    - dggath -V
+    - dgmap -V
+    - dgord -V
+    - dgpart -V
+    - dgscat -V
+    - dgtst -V
 
 about:
   home: https://www.labri.fr/perso/pelegrin/scotch/
@@ -67,4 +77,5 @@ about:
 extra:
   recipe-maintainers:
     - basnijholt
+    - dalcinl
     - minrk
