--- a/recipe/Makefile.inc
+++ b/recipe/Makefile.inc
@@ -8,8 +8,8 @@ AR          = ar
 ARFLAGS     = -ruv
 CAT         = cat
 CCS         = ${CC}
-CCP         = ${CCS}
-CCD         = ${CCP}
+CCP         = mpicc
+CCD         = ${CC}
 CFLAGS     := ${CFLAGS}
 CLIBFLAGS   = -fPIC
 LDFLAGS    := $(filter-out -lc++,${LDFLAGS})
@@ -20,44 +20,3 @@ MKDIR       = mkdir
 MV          = mv
 RANLIB      = ranlib
 YACC        = bison -pscotchyy -y -b y
-
-ifeq (${PKG_NAME},ptscotch)
-CCP = mpicc
-endif
-
-ifeq (${MAKELEVEL},0)
-
-pthread ?= 1
-UNAME_S ?= $(shell uname -s)
-
-CFLAGS 	+= -O3
-CFLAGS 	+= -I${PREFIX}/include
-CFLAGS 	+= -DIDXSIZE64
-CFLAGS 	+= -DSCOTCH_RENAME
-CFLAGS 	+= -Drestrict=__restrict
-CFLAGS 	+= -DCOMMON_FILE_COMPRESS_GZ
-CFLAGS 	+= -DCOMMON_RANDOM_FIXED_SEED
-LDFLAGS += -L${PREFIX}/lib -lz -lm
-
-ifeq (${pthread},1)
-CFLAGS  += -pthread
-CFLAGS  += -DCOMMON_PTHREAD
-#CFLAGS += -DSCOTCH_PTHREAD
-ifeq ($(UNAME_S),Darwin)
-CFLAGS  += -DCOMMON_PTHREAD_BARRIER
-endif
-LDFLAGS += -pthread
-endif
-
-ifeq ($(UNAME_S),Darwin)
-CFLAGS += -DCOMMON_TIMING_OLD
-endif
-
-ifeq ($(UNAME_S),Linux)
-LDFLAGS += -lrt
-endif
-
-export CFLAGS
-export LDFLAGS
-
-endif #(${MAKELEVEL},0)
