get Makefile.inc, build.sh from ptscotch

--- a/recipe/Makefile.inc
+++ b/recipe/Makefile.inc
@@ -1,23 +1,22 @@
-# -*- makefile -*-
+# -*- mode: makefile-gmake -*-
 
-EXE             =
-LIB             = .a
-OBJ             = .o
+EXE         =
+LIB         = .a
+OBJ         = .o
 
-MAKE            = make
-AR              = ar
-ARFLAGS         = -ruv
-CAT             = cat
-CCS            := ${CC}
-CCP             = mpicc
-CCD            := ${CC}
-CFLAGS         := ${CFLAGS}
-CLIBFLAGS      := ${CLIBFLAGS}
-LDFLAGS        := ${LDFLAGS}
-CP              = cp
-LEX             = flex -Pscotchyy --no-yywrap -olex.yy.c
-LN              = ln
-MKDIR           = mkdir
-MV              = mv
-RANLIB          = ranlib
-YACC            = bison -pscotchyy -y -b y
+AR          = ar
+ARFLAGS     = -ruv
+CAT         = cat
+CCS         = ${CC}
+CCP         = mpicc
+CCD         = ${CC}
+CFLAGS     := ${CFLAGS}
+CLIBFLAGS   = -fPIC
+LDFLAGS    := $(filter-out -lc++,${LDFLAGS})
+CP          = cp
+LEX         = flex -Pscotchyy -olex.yy.c
+LN          = ln
+MKDIR       = mkdir
+MV          = mv
+RANLIB      = ranlib
+YACC        = bison -pscotchyy -y -b y
