--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,6 @@
-{% set name = "scotch" %}
+{% set build = 3 %}
 {% set version = "6.0.4" %}
+{% set name = "scotch" %}
 {% set md5 = "d58b825eb95e1db77efe8c6ff42d329f" %}
 
 package:
@@ -9,23 +10,34 @@ package:
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   md5: {{ md5 }}
-  url: https://gforge.inria.fr/frs/download.php/latestfile/298/{{ name }}_{{ version }}.tar.gz
+  url: https://gforge.inria.fr/frs/download.php/latestfile/298/scotch_{{ version }}.tar.gz
+  patches:
+    - patch1.diff
+    - patch2.diff
 
 build:
   skip: true  # [win]
-  number: 2
+  number: {{ build }}
 
 requirements:
  build:
   - toolchain
-  - zlib 1.2.*
   - bison
   - flex 2.6.0
+  - zlib 1.2.*
+  {% if name == 'ptscotch' %}
+  - mpich 3.2.*
+  {% endif %}
  run:
   - zlib 1.2.*
+  {% if name == 'ptscotch' %}
+  - scotch
+  - mpich 3.2.*
+  {% endif %}
 
 test:
   commands:
+    {% if name == 'scotch' %}
     - test -f "${PREFIX}/lib/libscotch.a"
     - test -f "${PREFIX}/lib/libscotcherr.a"
     - test -f "${PREFIX}/lib/libscotcherrexit.a"
@@ -36,22 +48,44 @@ test:
     - test -f "${PREFIX}/include/metis.h"
     - test -f "${PREFIX}/include/esmumps.h"
     - mord -V
-    - gotst -V
-    - gord -V
-    - gpart -V
     - gmap -V
+    - gord -V
+    - gotst -V
+    - gpart -V
+    - gscat -V
+    {% else %}
+    - test -f "${PREFIX}/lib/libptscotch.a"
+    - test -f "${PREFIX}/lib/libptscotcherr.a"
+    - test -f "${PREFIX}/lib/libptscotcherrexit.a"
+    - test -f "${PREFIX}/lib/libptscotchparmetis.a"
+    - test -f "${PREFIX}/lib/libptesmumps.a"
+    - test -f "${PREFIX}/include/ptscotch.h"
+    - test -f "${PREFIX}/include/ptscotchf.h"
+    - test -f "${PREFIX}/include/parmetis.h"
+    - test -f "${PREFIX}/include/esmumps.h"
+    - dggath -V
+    - dgmap -V
+    - dgord -V
+    - dgpart -V
+    - dgscat -V
+    - dgtst -V
+    {% endif %}
 
 about:
   home: https://www.labri.fr/perso/pelegrin/scotch/
   license: CeCILL-C
-  license_file: LICENSE_en.txt
+  license_file: doc/CeCILL-C_V1-en.txt
+  {% if name == 'scotch' %}
   summary: 'SCOTCH: Static Mapping, Graph, Mesh and Hypergraph Partitioning, and Parallel and Sequential Sparse Matrix Ordering Package'
+  {% else %}
+  summary: 'PT-SCOTCH: (Parallel) Static Mapping, Graph, Mesh and Hypergraph Partitioning, and Parallel and Sequential Sparse Matrix Ordering Package'
+  {% endif %}
   description: |
     Software package and libraries for sequential and parallel 
     graph partitioning, static mapping and clustering, sequential 
     mesh and hypergraph partitioning, and sequential and parallel 
     sparse matrix block ordering.
-  doc_url: http://gforge.inria.fr/docman/?group_id=248
+  doc_url: http://gforge.inria.fr/docman/?group_id=248&dirid=326
 
 extra:
   recipe-maintainers:
