--- a/recipe/Makefile.inc
+++ b/recipe/Makefile.inc
@@ -7,9 +7,9 @@ OBJ         = .o
 AR          = ar
 ARFLAGS     = -ruv
 CAT         = cat
-CCS         = ${CC}
-CCP         = mpicc
-CCD         = ${CC}
+CCS        ?= ${CC}
+CCP        ?= ${CCP}
+CCD        ?= ${CCD}
 CFLAGS     := ${CFLAGS}
 CLIBFLAGS   = -fPIC
 LDFLAGS    := $(filter-out -lc++,${LDFLAGS})
