--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,9 @@
+{% set name = "scotch" %}
 {% set build = 4 %}
 {% set version = "6.0.4" %}
-{% set name = "scotch" %}
 {% set md5 = "d58b825eb95e1db77efe8c6ff42d329f" %}
+{% set mpi = os.environ.get('MPI_VARIANT', 'mpich') %}
+{% set mpi_version = {'mpich': '3.2.*', 'openmpi': '3.0.*'}[mpi] %}
 
 package:
   name: {{ name }}
@@ -26,13 +28,13 @@ requirements:
   - flex 2.6.0
   - zlib 1.2.*
   {% if name == 'ptscotch' %}
-  - mpich 3.2.*
+  - {{ mpi }} {{ mpi_version }}
   {% endif %}
  run:
   - zlib 1.2.*
   {% if name == 'ptscotch' %}
   - scotch {{version}}
-  - mpich 3.2.*
+  - {{ mpi }} {{ mpi_version }}
   {% endif %}
 
 test:
@@ -47,15 +49,9 @@ test:
     - test -f "${PREFIX}/lib/libesmumps.a"
     - test -f "${PREFIX}/include/scotch.h"
     - test -f "${PREFIX}/include/scotchf.h"
+    - test -f "${PREFIX}/include/esmumps.h"
     - test -f "${PREFIX}/include/scotch/metis.h"
     - test ! -f "${PREFIX}/include/metis.h"
-    - test -f "${PREFIX}/include/esmumps.h"
-    - mord -V
-    - gmap -V
-    - gord -V
-    - gotst -V
-    - gpart -V
-    - gscat -V
     {% else %}
     - test -f "${PREFIX}/lib/libptscotch.a"
     - test -f "${PREFIX}/lib/libptscotcherr.a"
@@ -64,15 +60,9 @@ test:
     - test -f "${PREFIX}/lib/libptesmumps.a"
     - test -f "${PREFIX}/include/ptscotch.h"
     - test -f "${PREFIX}/include/ptscotchf.h"
+    - test -f "${PREFIX}/include/esmumps.h"
     - test -f "${PREFIX}/include/scotch/parmetis.h"
     - test ! -f "${PREFIX}/include/parmetis.h"
-    - test -f "${PREFIX}/include/esmumps.h"
-    - dggath -V
-    - dgmap -V
-    - dgord -V
-    - dgpart -V
-    - dgscat -V
-    - dgtst -V
     {% endif %}
 
 about:
