--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "scotch" %}
 {% set build = 4 %}
 {% set version = "6.0.4" %}
-{% set md5 = "d58b825eb95e1db77efe8c6ff42d329f" %}
+{% set sha256 = "f53f4d71a8345ba15e2dd4e102a35fd83915abf50ea73e1bf6efe1bc2b4220c7" %}
 {% set mpi = os.environ.get('MPI_VARIANT', 'mpich') %}
 {% set mpi_version = {'mpich': '3.2.*', 'openmpi': '3.0.*'}[mpi] %}
 
@@ -11,8 +11,8 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  md5: {{ md5 }}
   url: https://gforge.inria.fr/frs/download.php/latestfile/298/scotch_{{ version }}.tar.gz
+  sha256: {{ sha256 }}
   patches:
     - patch1.diff
     - patch2.diff
