--- a/.ci_support/linux_c_compilergccfortran_compilergfortranmpimpich.yaml
+++ b/.ci_support/linux_c_compilergccfortran_compilergfortranmpimpich.yaml
@@ -6,8 +6,12 @@ channel_sources:
 - conda-forge/label/gcc7,defaults
 channel_targets:
 - conda-forge gcc7
+cxx_compiler:
+- gxx
 docker_image:
 - conda/c3i-linux-64
+flex:
+- 2.6.0
 fortran_compiler:
 - gfortran
 mpi:
@@ -17,6 +21,7 @@ pin_run_as_build:
     max_pin: x.x
 zip_keys:
 - - c_compiler
+  - cxx_compiler
   - fortran_compiler
   - channel_sources
   - channel_targets
