--- a/.ci_support/linux_c_compilertoolchain_cfortran_compilertoolchain_fortmpimpich.yaml
+++ b/.ci_support/linux_c_compilertoolchain_cfortran_compilertoolchain_fortmpimpich.yaml
@@ -6,8 +6,12 @@ channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
+cxx_compiler:
+- toolchain_cxx
 docker_image:
 - condaforge/linux-anvil
+flex:
+- 2.6.0
 fortran_compiler:
 - toolchain_fort
 mpi:
@@ -17,6 +21,7 @@ pin_run_as_build:
     max_pin: x.x
 zip_keys:
 - - c_compiler
+  - cxx_compiler
   - fortran_compiler
   - channel_sources
   - channel_targets
