--- a/.ci_support/osx_c_compilerclangfortran_compilergfortranmpiopenmpi.yaml
+++ b/.ci_support/osx_c_compilerclangfortran_compilergfortranmpiopenmpi.yaml
@@ -8,6 +8,10 @@ channel_sources:
 - conda-forge/label/gcc7,defaults
 channel_targets:
 - conda-forge gcc7
+cxx_compiler:
+- clangxx
+flex:
+- 2.6.0
 fortran_compiler:
 - gfortran
 macos_machine:
@@ -21,6 +25,7 @@ pin_run_as_build:
     max_pin: x.x
 zip_keys:
 - - c_compiler
+  - cxx_compiler
   - fortran_compiler
   - channel_sources
   - channel_targets
