--- a/.ci_support/osx_c_compilertoolchain_cfortran_compilertoolchain_fortmpimpich.yaml
+++ b/.ci_support/osx_c_compilertoolchain_cfortran_compilertoolchain_fortmpimpich.yaml
@@ -8,6 +8,10 @@ channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
+cxx_compiler:
+- toolchain_cxx
+flex:
+- 2.6.0
 fortran_compiler:
 - toolchain_fort
 macos_machine:
@@ -21,6 +25,7 @@ pin_run_as_build:
     max_pin: x.x
 zip_keys:
 - - c_compiler
+  - cxx_compiler
   - fortran_compiler
   - channel_sources
   - channel_targets
