add missing requirements.build for ptscotch

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -53,6 +53,9 @@ outputs:
     build:
       script: ${RECIPE_DIR}/build.sh
     requirements:
+      build:
+        - {{ compiler('fortran') }}
+        - {{ compiler('c') }}
       host:
         - flex
         - {{ mpi }}
